--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tone": "^15.1.22"
+    "tone": "^15.1.22",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
